# cheng

./: .gitignore  Cargo.toml  LICENSE  README.md  compare.py  deploy.sh  index.html  rust-toolchain.toml
.github/workflows/: ci.yml  gh-pages.yml
cheng/: Cargo.toml  build.rs
cheng-cmd/: Cargo.toml  build.rs
cheng-cmd/src/: args.rs  board_display.rs  main.rs  perft_bisect.rs  uci.rs
cheng/src/: fen.rs  lib.rs  movement.rs  pieces.rs  side_state.rs  sides.rs  square.rs
cheng/src/board/: borked.rs  iterator.rs  mask.rs  masks.rs  mod.rs  movegen.rs  new.rs  parsing.rs
cheng/src/movegen/: hash.rs  mod.rs  pieces.rs  precomputed.rs  steady.rs
cheng/src/movement/: display.rs  mod.rs  parsing.rs
cheng/tests/: correctness_fen_generation.rs  correctness_game_result.rs  correctness_movegen.rs  perft.rs  perft_chess_programming_wiki.rs  perft_en_masse.rs  perft_en_masse.txt  perft_kiwipete.rs  perft_maxima.rs  perft_position_initial.rs  perft_promotion.rs  perft_various.rs
chess-wasm/: Cargo.toml
chess-wasm/src/: lib.rs
flimsybird/: Cargo.toml
flimsybird/src/: evaluation.rs  lib.rs  params.rs  static_evaluation_tracer.rs
flimsybird/tests/: dont_do_absurd.rs  dont_postpone_checkmate.rs
franfish/: Cargo.toml
franfish/src/: debugger.rs  display.rs  evaluation.rs  inspector.rs  lib.rs
js/: chessboard.js  load_wasm.js
pkg/: chess_wasm.js  chess_wasm_bg.wasm  package.json
style/: chessboard.css  style.css
web/: deploy.sh  index.html  serve-uci.py
web/js/: chessboard.js  load_wasm.js  worker.js
web/style/: chessboard.css  style.css
(+6 files in other folders)
