[package]
name = "chess-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cheng = { path = "../cheng" }
flimsybird = { path = "../flimsybird" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0.159", features = ["derive"] }
serde-wasm-bindgen = "0.4"
js-sys = "0.3.61"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
