[package]
name = "chess-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cheng = { path = "../cheng" }
franfish = { path = "../franfish" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0.159", features = ["derive"] }
serde-wasm-bindgen = "0.4"
js-sys = "0.3.61"
wasm-bindgen-futures = "0.4.34"
log = "0.4"
wasm-logger = "0.2"


[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[features]
low_nbits = ["cheng/low_nbits"]
